--- a/3.html
+++ b/3.html
@@ -3,22 +3,30 @@
 <head>
   <title>Ganghyeon Community</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <h1><a href="index.html">Ganghyeon Community!</a></h1>
 
-  <ol>
-    <li><a href="1.html">우리 학교에 대해서</a></li>
-    <li><a href="2.html">채팅방</a></li>
-    <li><a href="3.html">커뮤니티(개발중)</a></li>
-  </ol>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html">우리 학교에 대해서</a></li>
+      <li><a href="2.html">채팅방</a></li>
+      <li><a href="3.html">커뮤니티(개발중)</a></li>
+    </ol>
+
+    <div id="article">
+      <p style="margin-top:45px;" width="100%">
+        개발중입니다!
+      </p>
+    </div>
+  </div>
 
 
 
-  <p style="margin-top:45px;" width="100%">
-    개발중입니다!
-  </p>
+
+
 
 
 
