--- a/1.html
+++ b/1.html
@@ -3,24 +3,56 @@
 <head>
   <title>Ganghyeon Community</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css"> 
 </head>
 
 <body>
   <h1><a href="index.html">Ganghyeon Community!</a></h1>
 
-  <ol>
-    <li><a href="1.html">우리 학교에 대해서</a></li>
-    <li><a href="2.html">채팅방</a></li>
-    <li><a href="3.html">커뮤니티(개발중)</a></li>
-  </ol>
-
-  <img src="school.jpeg">
 
 
-  <p style="margin-top:45px;" width="100%">
-    <strong>강현중학교(江峴中學校)</strong>는 서울특별시 동작구에 위치한 남녀공학 공립 <u>일반계 중학교</u>이다.
-    강원도 양양에도 동명의 학교가 있지만 교명만 동일한 것이다. 용마산 밑 주택가에 위치해 있어 동작구에 있는 중학교 중에서 상당히 고지대에 있는 편이며, 교명의 유래는 강고개이다.
-  </p>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html">우리 학교에 대해서</a></li>
+      <li><a href="2.html">채팅방</a></li>
+      <li><a href="3.html">커뮤니티(개발중)</a></li>
+    </ol>
+
+    <div id="article">
+      <img src="school.jpeg">
+
+
+      <p style="margin-top:45px;" width="100%">
+        <strong>강현중학교(江峴中學校)</strong>는 서울특별시 동작구에 위치한 남녀공학 공립 <u>일반계 중학교</u>이다.
+        강원도 양양에도 동명의 학교가 있지만 교명만 동일한 것이다. 용마산 밑 주택가에 위치해 있어 동작구에 있는 중학교 중에서 상당히 고지대에 있는 편이며, 교명의 유래는 강고개이다.
+      </p>
+
+      <p>
+      <iframe width="853" height="480" src="https://www.youtube.com/embed/xyf5qhLjOVY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </p>
+
+      <div id="disqus_thread"></div>
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://ganghyeon-community.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    </div>
+  </div>
+
 
 
 
