--- a/2.html
+++ b/2.html
@@ -3,16 +3,25 @@
 <head>
   <title>Ganghyeon Community</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <h1><a href="index.html">Ganghyeon Community!</a></h1>
 
-  <ol>
-    <li><a href="1.html">우리 학교에 대해서</a></li>
-    <li><a href="2.html">채팅방</a></li>
-    <li><a href="3.html">커뮤니티(개발중)</a></li>
-  </ol>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html">우리 학교에 대해서</a></li>
+      <li><a href="2.html">채팅방</a></li>
+      <li><a href="3.html">커뮤니티(개발중)</a></li>
+    </ol>
+
+    <div id="article">
+      <p style="margin-top:15px;">
+      채팅방은 개발중!
+    </div>
+  </div>
+
 
 
 </body>
