--- a/1.html
+++ b/1.html
@@ -3,7 +3,7 @@
 <head>
   <title>Ganghyeon Community</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css"> 
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -54,7 +54,7 @@
   </div>
 
 
-
+<script type="text/javascript" src="tawk.js"></script>
 
 </body>
 </html>
